# insight_agent_dev

./: .env.example  .gitignore  .zyw_insight_goal_progress.md  AGENTS.md  CODEX_CLI_RUNBOOK.md  CODEX_HIGH_PRIVILEGE_OPENCLAW_RUNBOOK.md  MANIFEST.json  Makefile  README.md  pyproject.toml
.codex/: config.high-trust-openclaw.toml  config.toml  config.toml.example
codex/: user_config.example.toml
configs/: budget.flagship.json  budget.poc.json  budget.production.json  budget.quality_first.json  budget.research.json  fulltext_policy.json  fulltext_token_policy.json  openrouter_canary.json  source_discovery.json
docs/: 01_DEVELOPMENT_PLAN.md  02_ARCHITECTURE.md  03_CNI_METHOD_SPEC.md  04_BUDGET_AND_MODEL_ROUTING.md  05_SECURITY_OPS.md  06_EVALS_AND_ACCEPTANCE.md  07_CODEX_CLI_WORKFLOW.md  08_CODEX_DEV_OPENCLAW_RUNTIME_BOUNDARY.md  09_OPENCLAW_RUNTIME_HARNESS.md  10_OPENCLAW_EXPERIMENT_READINESS.md
examples/: sample_article.md
openclaw/: OPENCLAW_SETUP.md  openclaw.experimental.json5  openclaw.production.json5
schemas/: adapter_run.schema.json  brief.schema.json  budget_policy.schema.json  canonical_full_paper_analysis.schema.json  constraint_critic.schema.json  cross_validation_report.schema.json  discovery_run.schema.json  draft_artifact.schema.json  email_draft.schema.json  full_paper_analysis_run.schema.json  fulltext_artifact.schema.json  fulltext_eligibility.schema.json  fulltext_prompt_audit.schema.json  human_approval.schema.json  literature_analysis.schema.json  model_request.schema.json  model_response.schema.json  openrouter_canary.schema.json  (+6 more)
(+199 files in other folders)
